# mempalace-migrator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.json  ROADMAP.md  TODO.json  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
examples/: make_sample_palace.py
src/mempalace_migrator/: __init__.py
src/mempalace_migrator/cli/: main.py
src/mempalace_migrator/core/: context.py  errors.py  pipeline.py
src/mempalace_migrator/detection/: DESIGN.md  format_detector.py
src/mempalace_migrator/extraction/: chroma_06_reader.py
src/mempalace_migrator/reconstruction/: __init__.py  _manifest.py  _safety.py  _types.py  _writer.py  reconstructor.py
src/mempalace_migrator/reporting/: report_builder.py  text_renderer.py
src/mempalace_migrator/transformation/: __init__.py  _analyze.py  _normalize.py  _types.py  transformer.py
src/mempalace_migrator/validation/: __init__.py  _types.py  consistency.py  parity.py  (+2 more)
tests/: M10_RECONSTRUCTION_DESIGN.md  M11_PARITY_DESIGN.md  M12_WRITE_PATH_DESIGN.md  M13_E2E_USABILITY_DESIGN.md  M14_TRUTH_ALIGNMENT_DESIGN.md  M15_CI_BASELINE_DESIGN.md  M16_RELEASE_DISCIPLINE_DESIGN.md  M7_ADVERSARIAL_DESIGN.md  M8_HARDENING_DESIGN.md  M9_TRANSFORMATION_DESIGN.md  ROADMAP.json  TODO.json  prompt-exit_gate_validator.md  test_chroma_06_reader.py  test_cli.py  test_cli_migrate.py  test_format_detector_contradictions.py  test_format_detector_structured_outputs.py  test_m15_red_path_proof.py  test_migrate_e2e.py  test_reconstruction_atomicity.py  test_reconstruction_manifest.py  test_reconstruction_pipeline.py  test_reconstruction_purity.py  test_reconstruction_safety.py  test_reconstruction_writer.py  test_report_builder.py  test_report_text.py  test_transformation_analyze.py  test_transformation_normalize.py  test_transformation_purity.py  test_transformation_transformer.py  test_truth_model.py  test_ux_cli.py  test_validation.py  test_validation_parity.py
tests/adversarial/: _invariants.py  conftest.py  test_adversarial_invariants.py  test_anomaly_completeness.py  test_broken_sqlite.py  test_corrupted_json.py  test_extreme_edge_cases.py  test_inconsistent_data.py  test_migrate_idempotence.py  test_mixed_format_inputs.py  test_partial_migration_safety.py  test_reconstruction_duplicates.py  test_reconstruction_readback.py  test_reconstruction_rollback.py  test_reconstruction_stress.py  test_reconstruction_target.py  test_transformation_pathological.py  test_validation_trust.py
tests/ci/: test_workflow_surface.py
tests/docs/: AUDIT.md  test_doc_surface.py
tests/hardening/: conftest.py  rebaseline.py  test_logging_discipline.py  test_memory_envelope.py  test_performance_baseline.py  test_stability_invariants.py
tests/release/: test_packaging.py  test_version_consistency.py
(+2 files in other folders)
