[project]
name = "mempalace-migrator"
version = "0.1.0"
description = "Constrained reconstruction tool for migrating MemPalace from ChromaDB 0.6.x to 1.x."
requires-python = ">=3.12"
dependencies = ["click>=8.1", "chromadb>=1.5.7,<2"]

[project.scripts]
mempalace-migrator = "mempalace_migrator.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "PyYAML"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mempalace_migrator"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
