[project]
name = "mempalace-migrator"
version = "0.1.0"
description = "Constrained reconstruction tool for migrating MemPalace from ChromaDB 0.6.x to 1.x."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adrien PAJON" }]
requires-python = ">=3.12"
keywords = ["chromadb", "migration", "mempalace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = ["click>=8.1", "chromadb>=1.5.7,<2"]

[project.urls]
Homepage = "https://github.com/apajon/mempalace-migrator"
Source = "https://github.com/apajon/mempalace-migrator"
Issues = "https://github.com/apajon/mempalace-migrator/issues"
Changelog = "https://github.com/apajon/mempalace-migrator/blob/main/CHANGELOG.md"

[project.scripts]
mempalace-migrator = "mempalace_migrator.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist", "ruff", "mypy", "PyYAML", "build>=1.0", "hatchling"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mempalace_migrator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "tests/**",
    "examples/**",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
